# ulauncher-cursor-recent

./: .gitignore  README.md  fuzzy.py  main.py  manifest.json  pyproject.toml
