[project]
name = "ulauncher-cursor-recent"
version = "0.1.1"
description = "Open recent Cursor folders and files using Ulauncher"
authors = [
    { name = "GEkuL", email = "42621207+GEkuL@users.noreply.github.com" },
    { name = "Mihir Chaturvedi", email = "plibither8@gmail.com" },
    { name = "slimneotech", email = "22907654+slimneotech@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["ulauncher", "extension", "code", "cursor"]
classifiers = [
    "Topic :: Desktop Environment"
]

[project.urls]
homepage = "https://github.com/slimneotech/ulauncher-cursor-recent"
repository = "https://github.com/slimneotech/ulauncher-cursor-recent"
documentation = "https://github.com/slimneotech/ulauncher-cursor-recent"

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.pyi?$'
